--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -4,7 +4,6 @@
   opacity: 1;
   transition: .3s;
   cursor: pointer;
-  background-image: url(/mesto/images/Vector.svg);
 }
 
 .elements__like:hover {
@@ -12,11 +11,10 @@
 }
 
 .elements__like:active {
-  background-image: url(/mesto/images/Union.png);
+  background-image: url(../../../images/Union.png);
   opacity: 1;
 }
 
 .elements__like:disabled {
-  background-image: url(/mesto/images/Vector.svg);
   opacity: 1;
 }
