--- a/pages/index.css
+++ b/pages/index.css
@@ -1,39 +1,39 @@
-@import url(../../etomesto/vendor/fonts/inter.css);
-@import url(../../etomesto/vendor/normalize.css);
+@import url(../vendor/fonts/inter.css);
+@import url(../vendor/normalize.css);
 
 
-@import url(../../etomesto/blocks/page/page.css);
-@import url(../../etomesto/blocks/header/header.css);
-@import url(../../etomesto/blocks/header/__logo/header__logo.css);
-@import url(../../etomesto/blocks/header/__line/header__line.css);
+@import url(../blocks/page/page.css);
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__line/header__line.css);
 
-@import url(../../etomesto/blocks/profile/profile.css);
-@import url(../../etomesto/blocks/profile/__avatar/profile__avatar.css);
-@import url(../../etomesto/blocks/profile/__button/profile__button.css);
-@import url(../../etomesto/blocks/profile/__edit-button/profile__edit-button.css);
-@import url(../../etomesto/blocks/profile/__info/profile__info.css);
-@import url(../../etomesto/blocks/profile/__main/profile__main.css);
-@import url(../../etomesto/blocks/profile/__subtitle/profile__subtitle.css);
-@import url(../../etomesto/blocks/profile/__title/profile__title.css);
-@import url(../../etomesto/blocks/profile/__rectangle/profile__rectangle.css);
-@import url(../../etomesto/blocks/profile/__vector/profile__vector.css);
-@import url(../../etomesto/blocks/profile/__title-flex/profile__title-flex.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__button/profile__button.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__main/profile__main.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__rectangle/profile__rectangle.css);
+@import url(../blocks/profile/__vector/profile__vector.css);
+@import url(../blocks/profile/__title-flex/profile__title-flex.css);
 
-@import url(../../etomesto/blocks/elements/elements.css);
-@import url(../../etomesto/blocks/elements/__element/elements__element.css);
-@import url(../../etomesto/blocks/elements/__group/elements__group.css);
-@import url(../../etomesto/blocks/elements/__mask-group/elements__mask-group.css);
-@import url(../../etomesto/blocks/elements/__title/elements__title.css);
-@import url(../../etomesto/blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__element/elements__element.css);
+@import url(../blocks/elements/__group/elements__group.css);
+@import url(../blocks/elements/__mask-group/elements__mask-group.css);
+@import url(../blocks/elements/__title/elements__title.css);
+@import url(../blocks/elements/__like/elements__like.css);
 
-@import url(../../etomesto/blocks/footer/footer.css);
-@import url(../../etomesto/blocks/footer/__author/footer__author.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__author/footer__author.css);
 
-@import url(../../etomesto/blocks/popup/popup.css);
-@import url(../../etomesto/blocks/popup/__container/popup__container.css);
-@import url(../../etomesto/blocks/popup/__edit-popup/popup__edit-popup.css);
-@import url(../../etomesto/blocks/popup/__field-name/popup__field-name.css);
-@import url(../../etomesto/blocks/popup/__field__author/popup__field_author.css);
-@import url(../../etomesto/blocks/popup/__submit-button/popup__submit-button.css);
-@import url(../../etomesto/blocks/popup/_opened/popup__opened.css);
-@import url(../../etomesto/blocks/popup/__close/popup__close.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__edit-popup/popup__edit-popup.css);
+@import url(../blocks/popup/__field-name/popup__field-name.css);
+@import url(../blocks/popup/__field__author/popup__field_author.css);
+@import url(../blocks/popup/__submit-button/popup__submit-button.css);
+@import url(../blocks/popup/_opened/popup__opened.css);
+@import url(../blocks/popup/__close/popup__close.css);
