--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -7,6 +7,10 @@
   opacity: 1;
   transition: .3s;
   cursor: pointer;
+  background: url(../../../images/CloseIcon.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+  border: none;
 }
 
 .popup__close:hover {
