--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -4,6 +4,10 @@
   opacity: 1;
   transition: .3s;
   cursor: pointer;
+  background: url(../../../images/Vector.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  border: none;
 }
 
 .elements__like:hover {
