--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,6 +8,9 @@
   opacity: 1;
   transition: .3s;
   padding: 0;
+  background: url(../../../images/Vector.png);
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .profile__edit-button:hover {
