--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,5 +1,7 @@
 .profile__subtitle {
-  font-family: 'Inter';
+  width: 336px;
+  height: 18px;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -7,10 +9,15 @@
   margin: 0;
   margin-top: 16px;
   padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media all and (max-width: 880px) {
   .profile__subtitle {
+    width: 282px;
+    height: 14px;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
