--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -1,15 +1,23 @@
 .profile__title {
-  font-family: 'Inter';
+  width: 294px;
+  height: 39px;
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
   line-height: 48px;
   margin:0;
   padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  
 }
 
 @media all and (max-width: 880px) {
   .profile__title {
+    width: 184px;
+    height: 26px;
     font-size: 27px;
     line-height: 33px;
   }
