--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -1,6 +1,6 @@
 .profile__subtitle {
-  width: 336px;
-  height: 18px;
+  max-width: 336px;
+  min-height: 18px;
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
