--- a/blocks/popup/__field-name/popup__field-name.css
+++ b/blocks/popup/__field-name/popup__field-name.css
@@ -10,7 +10,7 @@
   border-left: none;
   border-right: none;
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
