--- a/blocks/popup/__field__author/popup__field_author.css
+++ b/blocks/popup/__field__author/popup__field_author.css
@@ -11,7 +11,7 @@
   border-right: none;
   border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 
-  font-family: 'Inter';
+  font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
