--- a/pages/index.css
+++ b/pages/index.css
@@ -34,3 +34,12 @@
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close/popup__close.css);
+
+@import url(../blocks/popup-form/popup-form.css);
+@import url(../blocks/popup-form/__close/popup-form__close.css);
+@import url(../blocks/popup-form/__container/popup-form__container.css);
+@import url(../blocks/popup-form/__edit-popup/popup-form__edit-popup.css);
+@import url(../blocks/popup-form/__field-name/popup-form__field-name.css);
+@import url(../blocks/popup-form/__field__author/popup-form__field_author.css);
+@import url(../blocks/popup-form/__submit-button/popup-form__submit-button.css);
+@import url(../blocks/popup-form/_opened/popup-form_opened.css);
