--- a/pages/index.css
+++ b/pages/index.css
@@ -22,6 +22,8 @@
 @import url(../blocks/elements/__mask-group/elements__mask-group.css);
 @import url(../blocks/elements/__title/elements__title.css);
 @import url(../blocks/elements/__like/elements__like.css);
+@import url(../blocks/elements/__like/_active/elements__like_active.css);
+@import url(../blocks/elements/__delete/elements__delete.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
@@ -43,3 +45,9 @@
 @import url(../blocks/popup-form/__field__author/popup-form__field_author.css);
 @import url(../blocks/popup-form/__submit-button/popup-form__submit-button.css);
 @import url(../blocks/popup-form/_opened/popup-form_opened.css);
+
+@import url(../blocks/popup-image/popup-image.css);
+@import url(../blocks/popup-image/__close/popup-image__close.css);
+@import url(../blocks/popup-image/__container/popup-image__container.css);
+@import url(../blocks/popup-image/__edit-popup/popup-image__edit-popup.css);
+@import url(../blocks/popup-image/_opened/popup-image_opened.css);
