--- a/blocks/popup-image/__close/popup-image__close.css
+++ b/blocks/popup-image/__close/popup-image__close.css
@@ -3,7 +3,7 @@
   width: 32px;
   height: 32px;
   top: -45px;
-  left: 650px;
+  right: -40px;
   opacity: 1;
   transition: .3s;
   cursor: pointer;
@@ -20,6 +20,7 @@
 @media all and (max-width: 880px) {
   .popup-image__close {
     left: 220px;
+    top: -36px;
     width: 20px;
     height: 20px;
   }
