--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,5 +1,4 @@
 .popup {
-  display: none;
   align-items: center;
   justify-content: center;
   content: '';
@@ -11,4 +10,7 @@
   background: rgba(42,44,47,.5);
   transition: 0.3s;
   z-index: 2;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s linear;
 }
