--- a/pages/index.css
+++ b/pages/index.css
@@ -36,6 +36,12 @@
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__close/popup__close.css);
 
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__form-set/popup__form-set.css);
+@import url(../blocks/popup/input-error/input-error.css);
+@import url(../blocks/popup/__input/_type/popup__input_type_error.css);
+@import url(../blocks/popup/__submit-button/_disable/popup__submit-button_disabled.css);
+
 
 @import url(../blocks/popup-form/popup-form.css);
 @import url(../blocks/popup-form/__close/popup-form__close.css);
