--- a/blocks/popup/__field-name/popup__field-name.css
+++ b/blocks/popup/__field-name/popup__field-name.css
@@ -1,10 +1,9 @@
 .popup__field-name {
   width: 358px;
   min-height: 27px;
-  margin-top: 0;
+  margin-top: 13px;
   margin-left: 36px;
   margin-right: 36px;
-  margin-bottom: 48px;
   padding: 0;
   border-top: none;
   border-left: none;
@@ -19,9 +18,9 @@
 }
 
 .popup__field-name:focus {
-  border-color: #0077ff;
+  border-color: none;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgb(0, 119, 255, 0.4);
+
 }
 
 @media all and (max-width: 880px) {
