--- a/blocks/popup/__submit-button/popup__submit-button.css
+++ b/blocks/popup/__submit-button/popup__submit-button.css
@@ -10,6 +10,7 @@
   line-height: 22px;
   text-align: center;
   padding: 0;
+  margin-top: 31px;
   margin-left: 36px;
   margin-right: 36px;
   opacity: 1;
