--- a/blocks/popup-image/__edit-popup/image-edit-popup.css
+++ b/blocks/popup-image/__edit-popup/image-edit-popup.css
@@ -1,4 +1,4 @@
-.popup-image__edit-popup {
+.image-edit-popup {
   font-family: 'Inter', 'Arial', sans-serif;
   font-style: normal;
   font-weight: 400;
