--- a/src/blocks/popup-new-avatar/__field-link/popup-new-avatar__field-link.css
+++ b/src/blocks/popup-new-avatar/__field-link/popup-new-avatar__field-link.css
@@ -1,4 +1,4 @@
-.popup__field-name {
+.popup-new-avatar__field-link {
   width: 358px;
   min-height: 27px;
   margin-top: 13px;
@@ -17,23 +17,23 @@
   color: #000000;
 }
 
-.popup__field-name:focus {
+.popup-new-avatar__field-link:focus {
   border-color: none;
   outline: 0;
 
 }
 
 @media all and (max-width: 880px) {
-  .popup__field-name {
+  .popup-new-avatar__field-link {
     width: 238px;
     min-height: 27px;
     font-size: 14px;
     line-height: 17px;
 
-    /* margin-top: 30px; */
+    margin-top: 30px;
     margin-left: 22px;
     margin-right: 22px;
-    /* margin-bottom: 45px; */
+    margin-bottom: 45px;
 
   }
 }
