--- a/src/blocks/popup/input-error/input-error.css
+++ b/src/blocks/popup/input-error/input-error.css
@@ -11,7 +11,7 @@
   display: block;
   min-height: 35px;
   max-width: 358px;
-  padding-top: 5px;
+  /* padding-top: 5px; */
   box-sizing: border-box;
 }
 
