--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,11 +1,7 @@
 .profile__avatar {
   max-width: 168.75px;
   border-radius: 100px;
-  margin-right: 30px;
-}
-
-@media all and (max-width: 880px) {
-  .profile__avatar {
-    margin-right: 0;
-  }
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
