--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -15,6 +15,8 @@
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__title/profile__title.css);
 @import url(../blocks/profile/__title-flex/profile__title-flex.css);
+@import url(../blocks/profile/__hover/profile__hover.css);
+@import url(../blocks/profile/__hover-position/profile__hover-position.css);
 
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/__element/elements__element.css);
@@ -66,3 +68,16 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup-image/_opened/popup-image_opened.css);
 @import url(../blocks/popup-form/_opened/popup-form_opened.css);
+
+@import url(../blocks/popup-delete/__container/popup-delete__container.css);
+@import url(../blocks/popup-delete/__title/popup-delete__title.css);
+@import url(../blocks/popup-delete/__button/popup-delete__button.css);
+@import url(../blocks/popup-delete/__close/popup-delete__close.css);
+
+@import url(../blocks/popup-new-avatar/popup-new-avatar.css);
+@import url(../blocks/popup-new-avatar/__container/popup-new-avatar__container.css);
+@import url(../blocks/popup-new-avatar/__title/popup-new-avatar__title.css);
+@import url(../blocks/popup-new-avatar/__close/popup-new-avatar__close.css);
+@import url(../blocks/popup-new-avatar/__button/popup-new-avatar__button.css);
+@import url(../blocks/popup-new-avatar/__form-set/popup-new-avatar__form-set.css);
+@import url(../blocks/popup-new-avatar/__field-link/popup-new-avatar__field-link.css);
