--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -26,6 +26,8 @@
 @import url(../blocks/elements/__like/elements__like.css);
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
 @import url(../blocks/elements/__delete/elements__delete.css);
+@import url(../blocks/elements/__likes/elements__likes.css);
+@import url(../blocks/elements/__numbers/elements__numbers.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__author/footer__author.css);
