--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,8 +1,6 @@
 .profile__avatar {
-  max-width: 168.75px;
-  min-height: 127px;
-  border-radius: 100px;
-  width: 100%;
-  height: 100%;
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
   object-fit: cover;
 }
